# ecommerce-portfolio

./: .env.example  .gitignore  README.md  compose.yml
automation/api/: .env.example  README.md  conftest.py  pyproject.toml  pytest.ini
automation/api/clients/: __init__.py  api_client.py
automation/api/factories/: __init__.py  data_factory.py
automation/api/helpers/: __init__.py  assertions.py  config.py  workflows.py
automation/api/tests/: __init__.py  test_authentication.py  test_cart.py  test_catalog.py  test_health.py  test_orders.py  test_payments.py
automation/playwright/playwright-report/: index.html
automation/playwright/tests/: login.spec.ts
automation/robot/: .env.example  .gitignore  pyproject.toml
automation/robot/config/: variables.py
automation/robot/data/: test_data.py
automation/robot/libraries/: EcommerceLibrary.py
automation/robot/pages/: login_page.resource
automation/robot/resources/: auth.resource  common.resource
automation/robot/scripts/: run_all.sh  run_regression.sh  run_smoke.sh
automation/robot/tests/regression/: cart.robot
automation/robot/tests/smoke/: login.robot
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/cart/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/cart/migrations/: 0001_initial.py
backend/catalog/: admin.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
backend/catalog/management/commands/: cargar_datos_demo.py
backend/catalog/migrations/: 0001_initial.py
backend/config/: exception_handlers.py  exceptions.py  openapi.py  settings.py  settings_production.py  urls.py
backend/docker/: entrypoint.sh
backend/orders/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py
backend/payments/: admin.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/payments/migrations/: 0001_initial.py
backend/salud/: urls.py  views.py
backend/tests/: assertions.py  test_cors.py  test_documentation.py  test_error_handling.py  test_salud.py  test_security_settings.py
backend/tests/cart/: conftest.py  test_cart_api.py  test_models.py
backend/tests/catalog/: conftest.py  test_category_api.py  test_demo_data_command.py  test_models.py  test_product_api.py  test_serializers.py
backend/tests/orders/: conftest.py  test_order_api.py
backend/tests/payments/: conftest.py  test_payment_api.py
backend/tests/users/: conftest.py  test_authentication_api.py
backend/users/: exceptions.py  serializers.py  urls.py  views.py
docs/: backend-deployment.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: apiClient.test.ts  apiClient.ts  authApi.ts  cartApi.ts  catalogApi.ts  (+2 more)
(+56 files in other folders)
