[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6.0",
    "django-environ>=0.12,<1.0",
    "djangorestframework>=3.16,<4.0",
    "djangorestframework-simplejwt>=5.5,<6.0",
    "psycopg[binary]>=3.2,<4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<10.0",
    "pytest-django>=4.11,<5.0",
    "ruff>=0.12,<1.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
