[project]
name = "ecommerce-api-automation"
version = "0.1.0"
description = "Suite externa de automatización para la API del ecommerce"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28,<1",
  "python-dotenv>=1.1,<2",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<10",
  "pytest-html>=4.1,<5",
  "pytest-xdist>=3.6,<4",
  "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
